<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.countercraft</groupId>
    <artifactId>movecraft</artifactId>
    <packaging>jar</packaging>
    <name>Movecraft</name>
    <url>http://github.com/apdevteam/Movecraft</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <version>8.0.0-a.3</version>

    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>http://maven.sk89q.com/repo/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.countercraft</groupId>
            <artifactId>movecraft-v1_14_R1</artifactId>
            <version>v1_14_R1</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>net.countercraft</groupId>
            <artifactId>movecraft-v1_15_R1</artifactId>
            <version>v1_15_R1</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>net.countercraft</groupId>
            <artifactId>movecraft-v1_16_R3</artifactId>
            <version>v1_16_R3</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>net.countercraft</groupId>
            <artifactId>movecraft-v1_17_R1</artifactId>
            <version>v1_17_R1</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>net.countercraft</groupId>
            <artifactId>movecraft-api</artifactId>
            <version>API</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>net.countercraft</groupId>
            <artifactId>movecraft-datapack</artifactId>
            <version>datapack</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.26</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations-java5</artifactId>
            <version>RELEASE</version>
        </dependency>
        <dependency>
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil</artifactId>
            <version>8.3.1</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>Movecraft</finalName>
        <directory>../../target</directory>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>plugin.yml</include>
                    <include>config.yml</include>
                    <include>localisation/**</include>
                    <include>types/*.craft</include>
                    <include>movecraft-data.zip</include>
                </includes>
            </resource>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>../../target-datapack</directory>
                <includes>
                    <include>movecraft-data.zip</include>
                </includes>
            </resource>
            <resource>
                <targetPath>.</targetPath>
                <directory>../../</directory>
                <includes>
                    <include>LICENSE.md</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>zip</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <forceCreation>true</forceCreation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>13</source>
                    <target>13</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.8.1</version>
                <configuration>
                    <excludePackageNames>*.metrics</excludePackageNames>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>it.unimi</pattern>
                                    <shadedPattern>net.countercraft.movecraft.libs.it.unimi</shadedPattern>
                                </relocation>
                            </relocations>
                            <minimizeJar>true</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <filters>
                                <filter>
                                    <artifact>net.countercraft:movecraft-v1_14_R1</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>net.countercraft:movecraft-v1_16_R1</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>net.countercraft:movecraft-v1_16_R3</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>net.countercraft:movecraft-v1_17_R1</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>net.countercraft:datapack</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                            </filters>
                            <artifactSet>
                                <includes>
                                    <include>net.countercraft:movecraft*</include>
                                    <include>org.roaringbitmap:*</include>
                                    <include>it.unimi.dsi:fastutil*</include>
                                    <include>net.kyori:adventure*</include>
                                    <include>net.kyori:examination*</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
